--- a/mapleave.html
+++ b/mapleave.html
@@ -14,6 +14,7 @@
 <div class="column_edge1">
 	<a href="calculus.html">微積分</a><br>
 	<a href="高等微積分.html">高等微積分</a><br>
+	<a href="線性代數.html">線性代數</a><br>
 </div>
 <div class="column_mid">
 	<h2>前言</h2>
