--- a/mapleave.html
+++ b/mapleave.html
@@ -6,10 +6,10 @@
 <meta name="description"content="Web Tutorials">
 <meta name="keywords"content="math,calculus,advanced calculus,linear algebra,數學,微積分,高等微積分">
 <meta name="author"content="mapleave">
-<title>MAPLEAVE的數學小屋</title>
+<title>數學小屋</title>
 </head>
 <body>
-<div id="header"><h1>歡迎來到MAPLEAVE的數學小屋~</h1></div>
+<div id="header"><h1>歡迎來到的數學小屋~</h1></div>
 <hr>
 <div class="column_edge1">
 	<a href="calculus.html">微積分</a><br>
