--- a/calculus.html
+++ b/calculus.html
@@ -12,18 +12,23 @@
 <div id="header"><h1>歡迎來到數學小屋~</h1></div>
 <hr>
 <div class="column_edge1">
+	<div class="leftfixed">
 	<a href="calculus.html">微積分</a><br>
 	<a href="高等微積分.html">高等微積分</a><br>
 	<a href="線性代數.html">線性代數</a><br>
+	</div>
 </div>
 <div class="column_mid">
 	<a id="極限"></a>
 	<h2></h2>
 	<p>
+		維修中
 	</p>
 </div>
 <div class="column_edge2">
+	<div class="rightfixed">
 	<a href="#極限">極限</a><br>
+	</div>
 </div>
 <div style="clear:both">
 <hr>
