--- a/mapleave.html
+++ b/mapleave.html
@@ -12,9 +12,11 @@
 <div id="header"><h1>歡迎來到的數學小屋~</h1></div>
 <hr>
 <div class="column_edge1">
+	<div class="leftfixed">
 	<a href="calculus.html">微積分</a><br>
 	<a href="高等微積分.html">高等微積分</a><br>
 	<a href="線性代數.html">線性代數</a><br>
+	</div>
 </div>
 <div class="column_mid">
 	<h2>前言</h2>
