--- a/高等微積分.html
+++ b/高等微積分.html
@@ -12,9 +12,11 @@
 <div id="header"><h1>歡迎來到數學小屋~</h1></div>
 <hr>
 <div class="column_edge1">
+	<div class="leftfixed">
 	<a href="calculus.html">微積分</a><br>
 	<a href="高等微積分.html">高等微積分</a><br>
 	<a href="線性代數.html">線性代數</a><br>
+	</div>
 </div>
 <div class="column_mid">
 	<a id="最大下界存在證明"></a>
@@ -32,7 +34,9 @@
 </div>
 </div>
 <div class="column_edge2">
+	<div class="rightfixed">
 	<a href="#最大下界存在證明">最大下界證明</a><br>
+	</div>
 </div>
 <div style="clear:both">
 <hr>
