--- a/線性代數.html
+++ b/線性代數.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="css/mathstyle.css">
+<link rel="stylesheet" type="text/css" href="mathstyle.css">
 <meta charset="UTF-8">
 <meta name="description"content="Web Tutorials">
 <meta name="keywords"content="math,calculus,advanced calculus,linear algebra,數學,微積分,高等微積分">
