--- a/高等微積分.html
+++ b/高等微積分.html
@@ -21,8 +21,8 @@
 <div class="column_mid">
 	<a id="最大下界存在證明"></a>
 	<h2>最大下界存在證明</h2>
-<div class="left">
-	<p>S has the least upper bound property B⊂S, B is bounded below,<br>
+	<div class="left">
+		<p>S has the least upper bound property B⊂S, B is bounded below,<br>
 		then α = inf B exists.<br>
 		B is bounded below => Let L be the set of all lower bounds of B<br>
 		=> L is bounded above => α = sup L exists<br>
@@ -30,12 +30,20 @@
 		If β ∈ B, β ≧ α => α is a lower bound of B => α ∈ L<br>
 		If β > α, β is a lower bound of B => β ∈ L →←(∵ α = sup L)<br>
 		=> β is not a lower bound of B => α = inf B exists 
-	</p>
-</div>
+		</p>
+	</div>
+	<a id="極限證明"></a>
+	<h2>極限證明</h2>
+	<div class="left">
+		<p>
+		
+		</p>
+	</div>
 </div>
 <div class="column_edge2">
 	<div class="rightfixed">
 	<a href="#最大下界存在證明">最大下界證明</a><br>
+	<a href="#極限證明">極限證明</a><br>
 	</div>
 </div>
 <div style="clear:both">
